# paperai_python

./: .gitignore  README.md
paperai/: .dockerignore  .gitignore  Dockerfile  README.md  deployment.yaml  pyproject.toml
paperai/src/paperai/: cli.py  data_loader.py  data_processor.py  models.py  pdf_handler.py  report_generator.py  summarizer.py
paperai/tests/: test_data_loader.py  test_report_generator.py
