[tool.poetry]
name = "paperai"
version = "0.1.0"
description = "A command-line application for processing and analyzing scientific papers."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "paperai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.0"
openai = "^1.0.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
tqdm = "^4.66.1"
python-dotenv = "^1.0.0"
PyPDF2 = "^3.0.1"
pypdf = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
lint = "^0.0.6"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"