[tool.poetry]
name = "paperai"
version = "0.1.0"
description = "A command-line application for processing and analyzing scientific papers."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
requests = "^2.25.1"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"